# game-solvers

./: .pre-commit-config.yaml  README.rst  noxfile.py  pyproject.toml
.github/workflows/: pr_develop.yml  pr_master.yml  pr_release.yml  push_bugfix.yml  push_feature.yml  push_hotfix.yml
src/game_solvers/: __init__.py  __main__.py  cli.py  default_settings.py
src/game_solvers/common/: report.py  reporting.py  resources.py
src/game_solvers/games/: __init__.py  wordle.py
src/game_solvers/resources/data/: example_data.csv  words_alpha_five_letters.txt
tests/fixtures/data/: cutdown_dictionary.csv
tests/unit/: conftest.py  test_cli.py  test_dummy.py
tests/unit/common/: test_report.py  test_resources.py
tests/unit/games/: test_wordle.py
