[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "game-solvers"
version = "0.1.0"
description = "CLI application for solving puzzle games"
authors = ["Matt Mulligan <matt@mattmulligan.net>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
pyapp = "~= 4.15"
rich = "~= 13.7"

[tool.poetry.group.dev.dependencies]
pytest = "~= 8.2"
pytest-cov = "~= 5.0"
ruff = "~= 0.4"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py312"