# BUILD SYSTEM CONFIGURATION

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# POETRY CONFIGURATION

[tool.poetry]
name = "game-solvers"
version = "0.1.0"
description = "CLI application for solving puzzle games"
authors = ["Matt Mulligan <matt@mattmulligan.net>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
pyapp = "~= 4.15"
rich = "~= 13.7"

[tool.poetry.group.dev.dependencies]
pytest = "~= 8.2"
pytest-cov = "~= 5.0"
ruff = "~= 0.4"
mypy = "~= 1.10"

# RUFF CONFIGURATION

[tool.ruff]
target-version = "py312"
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # complexity
    "D",  # docstrings
    "E",  # pycodestyle
    "F",  # Pyflakes
    "G",  # flake8-logformat
    "I",  # isort
    "N",  # pep8-naming
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "W",  # pycodestyle
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
