# BUILD SYSTEM CONFIGURATION

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# POETRY CONFIGURATION

[tool.poetry]
name = "game-solvers"
version = "0.1.0"
description = "CLI application for solving puzzle games"
authors = ["Matt Mulligan <matt@mattmulligan.net>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
pyapp = "~= 4.15"
rich = "~= 13.7"

[tool.poetry.group.dev.dependencies]
pytest = "~= 8.2"
pytest-cov = "~= 5.0"
ruff = "~= 0.4"
mypy = "~= 1.10"
pre-commit = "~= 3.7"

# RUFF CONFIGURATION

[tool.ruff]
target-version = "py312"
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # complexity
    "D",  # docstrings
    "E",  # pycodestyle
    "F",  # Pyflakes
    "G",  # flake8-logformat
    "I",  # isort
    "N",  # pep8-naming
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "W",  # pycodestyle
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E501",  # Line too long
    "S101",  # Use of assert detected
    "D",  # Docstrings
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# MYPY CONFIGURATION

[tool.mypy]
python_version = "3.12"

# enforce typing
check_untyped_defs = true  # mypy to still check methods/funcs without type hints
disallow_untyped_calls = true  # enforce all calls require type hinting
disallow_untyped_decorators = true  # enforce all decorators require type hinting
disallow_untyped_defs = true  # enforce all methods/funcs require type hints
disallow_incomplete_defs = true  # enforce that all args in a def need typing, not just some

show_error_codes = true  # ensure error codes given in output of mypy

# warnings for developer action
warn_redundant_casts = true  # warns of unnesssiary casting
warn_return_any = true  # warns of funcs returning untyped or Any typed returns
warn_unused_configs = true  # warns of per-module mypy config that doesnt match any module
warn_unused_ignores = true  # mypy warning if an "ignore" isn't requried anymore

[[tool.mypy.overrides]]
module = "game_solvers.cli"
ignore_errors = true
